Fix bug workinground with current API problem